# gix

./: .gitignore  CHANGELOG.md  CLOUD_DEPLOYMENT_QUICKREF.md  CRYPTO_PRODUCTION_VERIFIED.md  Cargo.toml  DOCKER_QUICKREF.md  GCAM_PERSISTENCE_COMPLETE.md  GIX_CLI_COMPLETE.md  GIX_CLI_FINAL_REPORT.md  GIX_CLI_QUICKREF.md  GIX_CRYPTO_REFACTORED.md  GIX_PROTO_COMPLETE.md  GIX_PROTO_VERIFICATION.md  GRPC_REFACTORING_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  OBSERVABILITY_QUICKREF.md  PHASE_2A_COMPLETE.md  PHASE_2A_SPECIFICATION_VERIFIED.md  PHASE_2A_VERIFICATION.md  PHASE_2C_SUMMARY.md  PHASE_2_STEP_2_COMPLETE.md  PHASE_2_STEP_3_COMPLETE.md  PHASE_4_CONTAINERIZATION_COMPLETE.md  PHASE_5_OBSERVABILITY_COMPLETE.md  PHASE_6_CLOUD_DEPLOYMENT_COMPLETE.md  PHASE_6_FINAL_SUMMARY.md  PROMPT_2_COMPLETE.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_PREPARATION_v0.2.0.md  RELEASE_v0.2.0_FINAL.md  SERVICE_REFACTORING_VERIFICATION.md  STRUCTURE_VERIFICATION.md  docker-compose.yml
.cursor/: rules.md
.cursor/prompts/: README.md
.github/workflows/: ci.yml
crates/: README.md
crates/gix-common/: Cargo.toml
crates/gix-common/src/: errors.rs  lib.rs
crates/gix-crypto/: Cargo.toml
crates/gix-crypto/src/: hash.rs  lib.rs  vdf.rs
crates/gix-crypto/src/pqc/: dilithium.rs  kyber.rs  mod.rs
crates/gix-gxf/: Cargo.toml
crates/gix-gxf/src/: lib.rs
crates/gix-proto/: Cargo.toml  build.rs
crates/gix-proto/src/: lib.rs
crates/gix-testing/: Cargo.toml
crates/gix-testing/src/: lib.rs
docs/: README.md  grpc_services_guide.md
examples/: README.md  job_high_precision.yaml  job_low_precision.yaml  job_sample.yaml
infra/: README.md
infra/docker/: Dockerfile.auction  Dockerfile.enclave  Dockerfile.router  Dockerfile.rust-builder  README.md
infra/prometheus/: prometheus.yml
infra/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
proto/: README.md  gix.proto
scripts/: deploy_localnet.sh
sdk/: README.md
sdk/js/: README.md
sdk/python/: README.md
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
services/: README.md
services/ajr-router/: Cargo.toml
services/ajr-router/src/: lib.rs  main.rs
services/gcam-node/: Cargo.toml
services/gcam-node/src/: lib.rs  main.rs
services/gcam-node/tests/: persistence_test.rs
services/gsee-runtime/: Cargo.toml
services/gsee-runtime/src/: lib.rs  main.rs
specs/: README.md  crypto_spec.md  gxf_spec.md
specs/ajr/: README.md
specs/gcam/: README.md
specs/gsee/: README.md
specs/integrated/: README.md  network_protocol_v0.2.0.md
tools/: README.md
tools/circuits/: Cargo.toml
tools/circuits/src/: lib.rs
tools/gix-cli/: Cargo.toml  README.md
tools/gix-cli/src/: main.rs  wallet.rs
tools/gix-sim/: Cargo.toml
tools/gix-sim/src/: lib.rs  main.rs
