[workspace]
members = [
    "crates/*",
    "services/*",
    "tools/*",
    "sdk/rust"
]
resolver = "2"

# --- REQUIRED FOR INHERITANCE ---
[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["GIX Architecture Group"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/gix-network/gix"

[workspace.dependencies]
# Internal Crate Versions (Single Source of Truth)
gix-common = { path = "crates/gix-common", version = "0.2.0" }
gix-crypto = { path = "crates/gix-crypto", version = "0.2.0" }
gix-gxf = { path = "crates/gix-gxf", version = "0.2.0" }
gix-proto = { path = "crates/gix-proto", version = "0.2.0" }
gix-testing = { path = "crates/gix-testing", version = "0.2.0" }

# External Dependencies (Version Pinning)
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
blake3 = "1.5"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"