[package]
name = "gix-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Post-Quantum Cryptography
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3.5"

# Verifiable Delay Function
vdf = "0.1"

