[package]
name = "ajr-router"
version = "0.1.0"
edition = "2021"

[lib]
name = "ajr_router"
path = "src/lib.rs"

[[bin]]
name = "ajr-router"
path = "src/main.rs"

[dependencies]
gix-common = { path = "../../crates/gix-common" }
gix-gxf = { path = "../../crates/gix-gxf" }
gix-proto = { path = "../../crates/gix-proto" }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
