[package]
name = "gcam-node"
version = "0.1.0"
edition = "2021"

[lib]
name = "gcam_node"
path = "src/lib.rs"

[[bin]]
name = "gcam-node"
path = "src/main.rs"

[dependencies]
gix-common = { path = "../../crates/gix-common" }
gix-gxf = { path = "../../crates/gix-gxf" }
gix-proto = { path = "../../crates/gix-proto" }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sled = "0.34"
bincode = "1.3"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
